--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react": "16.12.0",
     "react-activity-feed": "0.10.2",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-router-dom": "5.1.2",
+    "mobx": "5.15.0",
+      "mobx-react": "6.1.4"
+
   },
   "devDependencies": {
     "typescript": "3.8.3"
