--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chaitanya-feed",
+  "homepage": "https://myusername.github.io/getStreamPocByC7",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -11,18 +12,22 @@
     "babel-runtime": "6.26.0",
     "bulma": "0.8.2",
     "get-stream": "5.1.0",
+    "gh-pages": "4.0.0",
+    "mobx": "5.15.0",
+    "mobx-react": "6.1.4",
     "react": "16.12.0",
     "react-activity-feed": "1.4.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1",
     "react-router-dom": "5.1.2",
-    "mobx": "5.15.0",
-    "mobx-react": "6.1.4"
+    "react-scripts": "3.0.1"
   },
   "devDependencies": {
+    "gh-pages": "4.0.0",
     "typescript": "3.8.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
