--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chaitanya-feed",
-  "homepage": "https://myusername.github.io",
+  "homepage": "https://myusername.github.io/getStreamPocByC7",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
