--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "jest-watch-typeahead": "0.3.0",
     "linkifyjs": "^2.1.9",
     "mini-css-extract-plugin": "0.5.0",
-    "mobx": "5.15.0",
-    "mobx-react": "6.1.4",
+    "mobx": "6.6.2",
+    "mobx-react": "7.5.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -76,9 +76,9 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "7.19.3",
     "gh-pages": "4.0.0",
-    "typescript": "3.8.3",
-    "@babel/plugin-proposal-decorators": "7.19.3"
+    "typescript": "3.8.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -139,6 +139,9 @@
     ]
   },
   "babel": {
+    "plugins": [
+      "transform-decorators-legacy"
+    ],
     "presets": [
       "react-app"
     ]
