--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
+    "styled-components": "5.3.6",
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
@@ -77,8 +78,17 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "7.19.3",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
     "gh-pages": "4.0.0",
     "typescript": "3.8.3"
+  },
+  "babel": {
+    "plugins": [
+      "transform-decorators-legacy"
+    ],
+    "presets": [
+      "react-app"
+    ]
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -136,14 +146,6 @@
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
-    ]
-  },
-  "babel": {
-    "plugins": [
-      "transform-decorators-legacy"
-    ],
-    "presets": [
-      "react-app"
     ]
   },
   "eslintConfig": {
